--- a/NodejsWebApp1 ver 5.2.4/NodejsWebApp1/views/Login_v2/index.html
+++ b/NodejsWebApp1 ver 5.2.4/NodejsWebApp1/views/Login_v2/index.html
@@ -93,15 +93,15 @@
                                 return i;
                             }
                         </script>
-                        <span id="txt1" style= "font-size:30px;">
+                        <span id="txt1" style="font-size:30px;">
 						</span>
                     </div>
                 </form>
+                <div class="text-center txt2">
+                    Copyright © 2021 National Taiwan Normal University. All Rights Reserved.
+                </div>
             </div>
         </div>
-        <span id="txt2">
-			版權所有 © 2019 National Taiwan Normal University
-		</span>
     </div>
     <script>
         var socket = io();
